docs: update readme to reflect project architecture, configuration, and usage instructions.